<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_perm_identity_black_18dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_perm_identity_black_18dp"
                        android:hint="@string/profile_name"
                        android:inputType="text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/profile_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_perm_identity_black_18dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_perm_identity_black_18dp"
                        android:hint="@string/profile_mobile"
                        android:inputType="phone"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/profile_email_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_perm_identity_black_18dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_perm_identity_black_18dp"
                        android:hint="@string/profile_emailid"
                        android:inputType="textEmailAddress"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <EditText
                        android:id="@+id/profile_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:drawableLeft="@drawable/ic_perm_identity_black_18dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_perm_identity_black_18dp"
                        android:focusable="false"
                        android:hint="@string/profile_dob"
                        android:inputType="textEmailAddress"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/profile_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_perm_identity_black_18dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_perm_identity_black_18dp"
                        android:hint="@string/profile_details"
                        android:inputType="textPostalAddress"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">

                    <RadioGroup
                        android:id="@+id/radio_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/radio_male" />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/radio_female" />

                    </RadioGroup>
                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/profile_update_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/buttonshape"
                    android:padding="10dp"
                    android:text="@string/submit_button"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</android.support.constraint.ConstraintLayout>