<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:id="@+id/item_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:text="Login"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <EditText
                    android:id="@+id/email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_perm_identity_black_18dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_perm_identity_black_18dp"
                    android:hint="@string/email_mobile"
                    android:inputType="textEmailAddress"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <!--  Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_black_18dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_lock_black_18dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <include layout="@layout/terms_conditions_layout"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"

                android:orientation="horizontal"
                android:weightSum="2">


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/register_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:padding="12dp"
                    android:text="@string/register"
                    android:textColor="@android:color/black" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:padding="12dp"
                    android:text="@string/login"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/forgot_password_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:padding="12dp"
                android:text="Forgot Password . . ?"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#f54785" />


        </LinearLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
