<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/rechage_account_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_account_no"
                        android:inputType="phone"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColorHint="@android:color/white"
                        android:visibility="gone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/rechage_std_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_std_code"
                        android:inputType="phone"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColorHint="@android:color/white"
                        android:visibility="gone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textl_mble"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/rechage_mobile_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/rechage_operator_spnr"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:spinnerMode="dropdown" />


                <include
                    layout="@layout/promo_code_layout"
                    android:visibility="gone"></include>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/rechage_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_recharge_amt"
                        android:inputType="phone"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColorHint="@android:color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/rechage_submit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/submit_button"
                    android:textColor="@color/white" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Need Discount..? Try Coupons in the Next Screen."
            android:textColor="@color/pink"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recharge_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"></android.support.v7.widget.RecyclerView>
    </LinearLayout>
</ScrollView>